[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemutils"
version = "0.0.1"
authors = [
  { name="Matt Feng" },
]
description="Chemistry utility functions"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rdkit >= 2022.09.5",
    "IPython >= 8.12.0",
    "selfies >= 2.1.0"
]